--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #7700ee;
+  background-image: linear-gradient(to bottom right, #7700ee, rgb(15, 15, 15));
   color: #fff;
   overflow-x: hidden;
 }
@@ -13,11 +14,11 @@ body {
   display: flex;
 }
 
-h1 {
+h2 {
   font-size: 5rem;
 }
 @media screen and (max-width: 768px) {
-  h1 {
+  h2 {
     font-size: 3rem;
   }
 }
